syntax = "proto3";

package backend.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/project-planton/project-planton/app/backend/apis/gen/go/proto;v1";

// CredentialService provides operations for managing cloud provider credentials.
service CredentialService {
  // CreateGcpCredential creates a new GCP credential.
  rpc CreateGcpCredential(CreateGcpCredentialRequest) returns (CreateGcpCredentialResponse);
}

// Request message for creating a GCP credential.
message CreateGcpCredentialRequest {
  // Name of the credential.
  string name = 1;
  // Base64-encoded GCP service account key JSON.
  string service_account_key_base64 = 2;
}

// Response message for creating a GCP credential.
message CreateGcpCredentialResponse {
  // Created GCP credential.
  GcpCredential credential = 1;
}

// GCP credential message.
message GcpCredential {
  // Unique identifier.
  string id = 1;
  // Name of the credential.
  string name = 2;
  // Base64-encoded GCP service account key JSON.
  string service_account_key_base64 = 3;
  // Creation timestamp.
  google.protobuf.Timestamp created_at = 4;
  // Last update timestamp.
  google.protobuf.Timestamp updated_at = 5;
}

